--- a/src/app/docs/embed-iframe-client/page.mdx
+++ b/src/app/docs/embed-iframe-client/page.mdx
@@ -96,7 +96,7 @@ export default function ExamplePage() {
     <iframe
       className="border-0 h-screen w-screen"
       ref={iframeRef}
-      src="http://localhost:3002/embed/sqlite"
+      src="https://libsqlstudio.com/embed/sqlite"
     />
   );
 }
