feat: add syntax highlight to mdx code block

--- a/src/app/docs/embed-iframe-client/page.mdx
+++ b/src/app/docs/embed-iframe-client/page.mdx
@@ -18,7 +18,7 @@ our iframe include:
 
 Here is a sample code demonstrating how to integrate using React and connect to Turso:
 
-```
+```tsx
 "use client";
 import { createClient, ResultSet } from "@libsql/client/web";
 import { useEffect, useMemo, useRef } from "react";
